--- a/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageDetail.zul
+++ b/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageDetail.zul
@@ -18,8 +18,8 @@
                 <tab id="tabPendidikan" label="Pendidikan"/>
                 <tab id="tabKursus" label="Kursus / Latihan"/>
                 <tab id="tabKegiatan" label="Kegiatan &amp; Karya Ilmiah"/>
-                <!--<tab id="tabPekerjaan" label="Pekerjaan &amp; Prestasi"/>
-                <tab id="tabStatus" label="Tanggal &amp; Status"/>-->
+                <tab id="tabPekerjaan" label="Pekerjaan &amp; Prestasi"/>
+                <tab id="tabStatus" label="Tanggal &amp; Status"/>
             </tabs>
             <tabpanels>
                 <tabpanel id="tabPanelPribadi" height="100%" style="border: none; padding: 0px; "/>
@@ -27,8 +27,8 @@
                 <tabpanel id="tabPanelPendidikan" height="100%" style="border: none; padding: 0px; "/>
                 <tabpanel id="tabPanelKursus" height="100%" style="border: none; padding: 0px; "/>
                 <tabpanel id="tabPanelKegiatan" height="100%" style="border: none; padding: 0px; "/>
-                <!--<tabpanel id="tabPanelPekerjaan" height="100%" style="border: none; padding: 0px; "/>
-                <tabpanel id="tabPanelStatus" height="100%" style="border: none; padding: 0px; "/>-->
+                <tabpanel id="tabPanelPekerjaan" height="100%" style="border: none; padding: 0px; "/>
+                <tabpanel id="tabPanelStatus" height="100%" style="border: none; padding: 0px; "/>
             </tabpanels>
         </tabbox>
     </window>
