--- a/siak/web/WEB-INF/pages/irs/cutimhs/pageMain.zul
+++ b/siak/web/WEB-INF/pages/irs/cutimhs/pageMain.zul
@@ -16,6 +16,7 @@
 				<toolbar align="start" style="float:left; border-style: none;">
 					<button id="btnHelp" height="24px" image="/images/icons/light_16x16.gif" tooltiptext="${c:l('btnHelp.tooltiptext')}" />
 					<button id="btnRefresh" height="24px" image="/images/icons/refresh2_yellow_16x16.gif" tooltiptext="${c:l('btnRefresh.tooltiptext')}" />
+                    <button id="buttonPrintList" height="24px" image="/images/icons/btn_print2_16x16.gif" tooltiptext="${c:l('btnPrint.tooltiptext')}"/>
 				</toolbar>
 				<toolbar align="center" style="float:left; border-style: none;">
                     <!-- SEARCH AREA -->
