--- a/trunk/siak/web/WEB-INF/pages/irs/cutimhs/pageMain.zul
+++ b/trunk/siak/web/WEB-INF/pages/irs/cutimhs/pageMain.zul
@@ -16,7 +16,6 @@
 				<toolbar align="start" style="float:left; border-style: none;">
 					<button id="btnHelp" height="24px" image="/images/icons/light_16x16.gif" tooltiptext="${c:l('btnHelp.tooltiptext')}" />
 					<button id="btnRefresh" height="24px" image="/images/icons/refresh2_yellow_16x16.gif" tooltiptext="${c:l('btnRefresh.tooltiptext')}" />
-                    <button id="buttonPrintList" height="24px" image="/images/icons/btn_print2_16x16.gif" tooltiptext="${c:l('btnPrint.tooltiptext')}"/>
 				</toolbar>
 				<toolbar align="center" style="float:left; border-style: none;">
                     <!-- SEARCH AREA -->
@@ -40,7 +39,8 @@
                 </toolbar>
 				<!-- CRUD BUTTONS -->
 				<toolbar align="end" style="float:right; border-style: none;">
-					<button id="btnNew" height="24px" tooltiptext="${c:l('btnNew.tooltiptext')}" />
+					<button id="buttonPrintList" height="24px" image="/images/icons/btn_print2_16x16.gif" tooltiptext="${c:l('btnPrint.tooltiptext')}" visible="false"/>
+                    <button id="btnNew" height="24px" tooltiptext="${c:l('btnNew.tooltiptext')}" />
 					<button id="btnEdit" height="24px" tooltiptext="${c:l('btnEdit.tooltiptext')}" />
 					<button id="btnDelete" height="24px" tooltiptext="${c:l('btnDelete.tooltiptext')}" />
 					<button id="btnSave" height="24px" tooltiptext="${c:l('btnSave.tooltiptext')}" />
