--- a/trunk/siak/web/WEB-INF/pages/mankurikulum/sesi/sesiDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/mankurikulum/sesi/sesiDetail.zul
@@ -38,37 +38,13 @@
                                         <separator bar="true"></separator>
                                     </row>
                                     <row>
-                                        <label value="Jam Awal (HH:SS)" />
-                                        <textbox id="txtb_cjamawal" value="@{controller.selected.cjamawal}" readonly="true" maxlength="5" width="8%"  xmlns:w="client">
-                                            <attribute w:name="doKeyPress_">
-                                                function(evt){
-                                                    if(this.getValue().length > 0 ){
-                                                        if (!this._shallIgnore(evt, "0123456789:"))
-                                                        this.$doKeyPress_(evt);
-                                                    } else {
-                                                        if (!this._shallIgnore(evt, "05"))
-                                                            this.$doKeyPress_(evt);
-                                                       }
-                                                    }
-                                            </attribute>
-                                        </textbox>
+                                        <label value="Jam Awal" />
+                                        <textbox id="txtb_cjamawal" constraint="/[0-9]+:.+[0-9]/: Please enter HH:MM Format" value="@{controller.selected.cjamawal}" readonly="true" maxlength="5" width="8%" />
                                     </row>
                                     <row>
                                         <label
-                                            value="Jam Akhir (HH:SS)" />
-                                        <textbox id="txtb_cjamakhir" value="@{controller.selected.cjamakhir}" readonly="true" maxlength="5" width="8%"  xmlns:w="client">
-                                            <attribute w:name="doKeyPress_">
-                                                function(evt){
-                                                    if(this.getValue().length > 0 ){
-                                                        if (!this._shallIgnore(evt, "0123456789:"))
-                                                        this.$doKeyPress_(evt);
-                                                    } else {
-                                                        if (!this._shallIgnore(evt, "05"))
-                                                            this.$doKeyPress_(evt);
-                                                       }
-                                                    }
-                                            </attribute>
-                                        </textbox>
+                                            value="Jam Akhir" />
+                                        <textbox id="txtb_cjamakhir" constraint="/[0-9]+:.+[0-9]/: Please enter HH:MM Format" value="@{controller.selected.cjamakhir}" readonly="true" maxlength="5" width="8%" />
                                     </row>
                                     <row>
                                         <hbox>
