--- a/siak/web/WEB-INF/pages/administrasi/kegiatan/KegiatanDetail.zul
+++ b/siak/web/WEB-INF/pages/administrasi/kegiatan/KegiatanDetail.zul
@@ -40,7 +40,7 @@
                                             <label value="*"
                                                    style="color:red;font-size:10px"/>
                                         </hbox>
-                                        <textbox id="txtb_filNr"
+                                        <textbox id="txtb_filNr" style="text-transform:uppercase"
                                                  value="@{controller.kegiatan.ckdkgt}" readonly="true"
                                                  constraint="no empty" maxlength="2" width="100px"/>
                                     </row>
@@ -53,7 +53,7 @@
                                                    style="color:red;font-size:10px"/>
                                         </hbox>
                                         <textbox
-                                                id="txtb_filName1"
+                                                id="txtb_filName1" style="text-transform:uppercase"
                                                 value="@{controller.kegiatan.cnmkgt}"
                                                 readonly="true" maxlength="50" width="99%"/>
                                     </row>
